# SummerEngine

./: .gitignore  CMakeLists.txt  README.md
Assets/Shaders/: shader.fs
engine/: CMakeLists.txt  Engine.cpp  Render.cpp  Scene.cpp  System.cpp
engine/Animation/: Spine.cpp
engine/Render/: Mesh.cpp  Model.cpp  Shader.cpp  Spine.cpp  Texture.cpp
include/SummerEngine/: Component.h  Engine.h  Manager.h  Module.h  Render.h  Scene.h  System.h
include/SummerEngine/Render/: Mesh.h  Model.h  Shader.h  Spine.h  Texture.h
lib/: CMakeLists.txt
lib/spine/: Animation.cpp  CMakeLists.txt
src/: CMakeLists.txt  Scene.cpp  main.cpp
src/Shaders/: shader.fs  shader.vs
src/spineTest/: Scene.cpp
src/test/: Scene.cpp
